<resources>
    <string name="app_name">Noticias</string>
    <string name="config_label">Configurações</string>

    <!-- String mensagens -->
    <string name="sem_internet">Não há conexão com a internet.</string>
    <string name="sem_dados">A pesquisa não retornou dados.</string>


    <!-- Layout Recyclerview -->
    <string name="imageDescription">Imagem referente à notícia</string>

    <!-- Nome dos Fragmentos -->
    <string name="frag_ultimas">Ultimas</string>
    <string name="frag_tecnologia">Tecnologias</string>
    <string name="frag_banking">Banking</string>
    <string name="frag_business">Business</string>
    <string name="frag_football">FootBall</string>
    <string name="frag_brasil">Brasil</string>
    <string name="frag_money">Money</string>

    <string name="frag_ultimas_tab">Últimas</string>
    <string name="frag_tecnologia_tab">Tecnologias</string>
    <string name="frag_banking_tab">Bancos</string>
    <string name="frag_business_tab">Negócios</string>
    <string name="frag_football_tab">Futebol</string>
    <string name="frag_brasil_tab">Brasil</string>
    <string name="frag_money_tab">Dinheiro</string>


    <!-- PreferenceScreen - Page Size - Default 10 -->
    <string name="config_pagesize_label">Notícias por página</string>
    <string name="config_pagesize_key">page-size</string>
    <string name="config_pagesize_default">10</string>

    <!-- PreferenceScreen - Page Size -->
    <string name="config_pagesize_quant_cinco">5</string>
    <string name="config_pagesize_quant_dez">10</string>
    <string name="config_pagesize_quant_vinte">20</string>
    <string name="config_pagesize_quant_trinta">30</string>
    <string name="config_pagesize_quant_quarenta">40</string>
    <string name="config_pagesize_quant_cinquenta">50</string>


    <!-- PreferenceScreen - order-by - Default newest
    É necessário um array para colocar essa configurações juntas -->
    <string name="config_orderby_label">Ordenar por</string>
    <string name="config_orderby_key">order-by</string>
    <string name="config_orderby_defalut">@string/config_orderby_newest_value</string>

    <!-- PreferenceScreen - order-by - label newest -->
    <string name="config_orderby_newest_label">Mais recentes</string>
    <string name="config_orderby_newest_value">newest</string>

    <!-- PreferenceScreen - order-by - label oldest -->
    <string name="config_orderby_oldest_label">Mais antigas</string>
    <string name="config_orderby_oldest_value">oldest</string>

    <!-- PreferenceScreen - order-by - label relevance -->
    <string name="config_orderby_relevance_label">Relevância</string>
    <string name="config_orderby_relevance_value">relevance</string>

    <!-- Menus -->
    <string name="menu_pesquisa_title">Pesquisar</string>
    <string name="menu_config_title">Configurações</string>

</resources>
