<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- page-size - Quantidade -->
    <ListPreference
        android:defaultValue="@string/config_pagesize_default"
        android:entries="@array/config_pagesize_quant"
        android:entryValues="@array/config_pagesize_quant"
        android:key="@string/config_pagesize_key"
        android:title="@string/config_pagesize_label" />

    <!-- order-by - Busca resultados na ordem especificada -->
    <ListPreference
        android:defaultValue="@string/config_orderby_defalut"
        android:entries="@array/config_orderby_labels"
        android:entryValues="@array/config_orderby_values"
        android:key="@string/config_orderby_key"
        android:title="@string/config_orderby_label" />

</PreferenceScreen>